--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,5 +34,4 @@ jobs:
         with:
           projectBaseDir: .
         env:
-          SONAR_TOKEN: ${{ SONAR_TOKEN }}
-          
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
