--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,4 +30,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
       - name: Run tests and SonarCloud analysis
-        run: mvn verify sonar:sonar -Dsonar.projectKey=<your_project_key> -Dsonar.organization=<your_org> -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+        run: mvn verify sonar:sonar \
+          -Dsonar.projectKey=${{ secrets.sonar.issues.defaultAssigneeLogin }} \
+          -Dsonar.organization=${{ secrets.sonar.sensor.cache.project.enable }} \
+          -Dsonar.host.url=https://sonarcloud.io \
+          -Dsonar.token=${{ secrets.SONAR_TOKEN }}
